# workshop_airflow

./: .dockerignore  .env  .gitignore  Dockerfile  airflow.cfg  main.py  pyproject.toml  requirements.txt
dags/: api_to_postgres.py  duckdb_custom_operator.py  main.py  minha_primeira_dag.py
include/: controller.py  db.py
